# rusql-alchemy

./: .gitignore  .gitmodules  Cargo.toml  README.md  test.db
.github/workflows/: ci.yml
examples/: Cargo.toml
examples/hello/: .env  Cargo.toml
examples/hello/src/: main.rs
examples/postgres/: .env  Cargo.toml
examples/postgres/src/: main.rs
examples/rocket/: Cargo.toml
examples/rocket/src/: main.rs
examples/sqlite/: .env  Cargo.toml
examples/sqlite/src/: main.rs
examples/turso/: Cargo.toml
rusql-alchemy/: Cargo.toml  README.md
rusql-alchemy-derive/: Cargo.toml
rusql-alchemy-derive/src/: lib.rs  process.rs  schema.rs
rusql-alchemy-derive/src/codegen/: mod.rs  schema.rs
rusql-alchemy-macro/: Cargo.toml
rusql-alchemy-macro/src/: lib.rs
rusql-alchemy/src/: lib.rs  macros.rs  prelude.rs  utils.rs
rusql-alchemy/src/db/: mod.rs  model.rs  models.rs  types.rs
rusql-alchemy/src/db/query/: builder.rs  condition.rs  mod.rs  statement.rs
rust-alchemy-macro/: Cargo.toml
rust-alchemy-macro/src/: lib.rs
src/: lib.rs  macros.rs  main.rs  prelude.rs  types.rs  utils.rs
src/db/: mod.rs  models.rs
src/models/: mod.rs
tests/: Cargo.toml  tests.rs
tests/postgres/: Cargo.toml
tests/sqlite/: Cargo.toml
