[workspace.package]
version = "0.5.1"
edition = "2021"
authors = ["FITAHIANA Nomeniavo Joe <24nomeniavo@gmail.com>"]
keywords = ["orm", "rust", "django-orm", "lib"]
license = "Apache-2.0"

[workspace]
resolver = "2"
members = ["rusql-alchemy", "rusql-alchemy-derive"]

[workspace.dependencies]
# Core utilities & async
async-trait = "^0.1.89"
tokio = "^1.48.0"
lazy_static = "1.5.0"
anyhow = "1.0.100"

# Configuration & Environment
dotenv = "^0.15.0"

# Serialization
serde = "1.0"
serde_json = "1.0"

# Web Framework
rocket = "0.5.1"

# Database
sqlx = { version = "^0.8", default-features = false }

# libsql with necessary features but without bundling its own SQLite
libsql = { version = "0.9.24", default-features = false, features = [
    "core",           # Core functionality
    "replication",    # Replication support
    "parser",         # SQL parser
    "serde",         # Serialization support
] }

chrono = "0.4.42"
inventory = "0.3"
sqlformat = "0.5.0"

# Local database utilities (development)
rusql-alchemy.path = "rusql-alchemy"
rusql-alchemy-derive.path = "rusql-alchemy-derive"

# macro
proc-macro2 = "1"
quote = "1.0.40"
syn = "2.0"
deluxe = "0.5"

# Use system SQLite
[workspace.dependencies.libsqlite3-sys]
version = "0.30"
features = []

[profile.dev.package.libsqlite3-sys]
opt-level = 3
