[workspace.package]
version = "0.5.1"
edition = "2021"
authors = ["FITAHIANA Nomeniavo Joe <24nomeniavo@gmail.com>"]
keywords = ["orm", "rust", "django-orm", "lib"]
license = "Apache-2.0"

[workspace]
resolver = "2"
members = ["rusql-alchemy", "rusql-alchemy-derive"]


[workspace.dependencies]
# Core utilities & async
async-trait = "^0.1.89"

# Serialization
serde = "1.0"
serde_json = "1.0"

# Database
sqlx = "^0.8"
sqlformat = "0.5.0"
libsql = "0.9.24"

chrono = "0.4.42"

inventory = "0.3"

rusql-alchemy-derive.path = "rusql-alchemy-derive"

# macro
proc-macro2 = "1"
quote = "1.0.40"
syn = "2.0"
deluxe = "0.5"
