[workspace.package]
version = "0.5.5"
edition = "2021"
authors = ["FITAHIANA Nomeniavo Joe <24nomeniavo@gmail.com>"]
keywords = ["orm", "rust", "django-orm", "lib"]
license = "Apache-2.0"
readme = "README.md"
description = "Rust Alchemy is Django ORM like lib for Rust"
documentation = "https://docs.rs/rusql-alchemy/latest/rusql_alchemy/"
homepage = "https://github.com/j03-dev/rusql-alchemy"
repository = "https://github.com/j03-dev/rusql-alchemy"

[workspace]
resolver = "2"
members = ["rusql-alchemy", "rusql-alchemy-derive", "tests"]


[workspace.dependencies]
# Core utilities & async
async-trait = "^0.1.89"

# Serialization
serde = "1.0"
serde_json = "1.0"

# Database
sqlx = "^0.8"
sqlformat = "0.5.0"
libsql = "0.9.29"

chrono = "0.4.42"

inventory = "0.3"

rusql-alchemy = { path = "rusql-alchemy", version = "0.5.5", default-features = false }
rusql-alchemy-derive = { path = "rusql-alchemy-derive", version = "0.5.5" }

# macro
proc-macro2 = "1"
quote = "1.0.42"
syn = "2.0"
deluxe = "0.5"

tokio = {version = "1", features = ["full"]}
