[package]
name = "rusql-alchemy-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
description = "macro for rusql-alchemy"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }
deluxe.workspace = true
