[package]
name = "rusql-alchemy-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
description = "macro for rusql-alchemy"

[lib]
proc-macro = true

[features]
default = ["sqlx"]
sqlx = []
libsql = []

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }
deluxe.workspace = true