[package]
name = "rusql-alchemy"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
description = "Rust Alchemy is Django ORM like lib for Rust"
documentation = "https://docs.rs/russenger/latest/rusql-alchemy/"
homepage = "https://github.com/russenger/rusql-alchemy"
repository = "https://github.com/russenger/rusql-alchemy"


[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
turso = ["libsql", "rusql-alchemy-derive/turso"]

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
rusql-alchemy-derive = { workspace = true, features = [] }
libsql = { workspace = true, optional = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "any"], optional = true }
sqlformat.workspace = true
chrono.workspace = true
inventory.workspace = true
