[package]
name = "rusql-alchemy"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true


[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
turso = ["libsql", "rusql-alchemy-derive/turso"]

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
rusql-alchemy-derive = { workspace = true, features = [] }
libsql = { workspace = true, optional = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "any"], optional = true }
sqlformat.workspace = true
chrono.workspace = true
inventory.workspace = true
