[package]
name = "rocket-alchemy"
version = "0.1.2"
edition = "2021"
workspace = ".."


[dependencies.rusql-alchemy]
path = "../.."
default-features = false
features = ["postgres"]

[dependencies]
sqlx = "^0.7.0"
rocket = { version = "^0.5.0", features = ["json"] }
serde = { version = "^1.0.203", features = ["derive"] }
