[package]
name = "rocket-alchemy"
version = "0.1.0"
edition = "2021"
workspace = ".."


[dependencies]
anyhow.workspace = true
rocket = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
rusql-alchemy = { workspace = true, features = ["postgres"] }
sqlx.workspace = true
